# src/models/blogpostModel.ts
@@ -1,32 +1,34 @@
-import { Schema,model } from "mongoose";
-import { blogpostInterface } from "../interface";
+import { Schema, model } from 'mongoose'
+import { blogpostInterface } from '../interface'
 
-
-const blogpostSchema = new Schema<blogpostInterface>({
-    title:{
-        type: String,
-        required: true
+const blogpostSchema = new Schema<blogpostInterface>(
+  {
+    title: {
+      type: String,
+      required: true
     },
-    content:{
-        type: String,
-        required: true
+    content: {
+      type: String,
+      required: true
     },
-    userID:{
-        type: Schema.Types.ObjectId,
-        required: true,
-        ref: 'userInterface'
+    userID: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: 'userInterface'
     },
-    likes:{
-        type: Number,
-        required: true
+    likes: {
+      type: Number,
+      required: true
     },
-    dislikes:{
-        type: Number,
-        required: true
+    dislikes: {
+      type: Number,
+      required: true
     }
+  },
+  { timestamps: true }
+)
 
-},{timestamps:true})
-
-export const  blogpostModel = model<blogpostInterface>('blogpost',blogpostSchema)
-
-
+export const blogpostModel = model<blogpostInterface>(
+  'blogpost',
+  blogpostSchema
+)
